--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <code>deleteOperatingSystem();</code>
 
-    <div class="adaptive-grid">
+    <div class="cols-2 gap adaptive">
       <div style="width: 100%; height: 200px; border: 1px solid;">1</div>
       <div style="width: 100%; height: 200px; border: 1px solid;">2</div>
       <div style="width: 100%; height: 200px; border: 1px solid;">3</div>
