--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h1>Heading 1</h1>
     <p>Lorem ipsum dolor sit amet <a href="#">consectetur adipisicing</a> elit. Aut quibusdam nesciunt, ad qui laudantium nihil odit nulla dicta molestiae ipsa ut aliquid animi nemo ex necessitatibus. Labore explicabo voluptatum officiis?</p>
     <h2>Heading 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo laborum labore in praesentium, repellendus laudantium necessitatibus reprehenderit magnam delectus! Iusto soluta dignissimos saepe magnam. Minima aperiam ipsum excepturi quo.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <q>Quia explicabo laborum labore in praesentium.</q> Repellendus laudantium necessitatibus reprehenderit magnam delectus! Iusto soluta dignissimos saepe magnam. Minima aperiam ipsum excepturi quo.</p>
+    <blockquote>This is a block quote.</blockquote>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate saepe reiciendis itaque nemo recusandae sequi nulla, dignissimos cumque, corporis expedita et! Aliquam veritatis fuga consequatur facere nulla voluptatum ullam atque.</p>
     <hr>
     <ul>
